build/xtask/tests/snapshots/i2c_codegen__app_gimlet_rev-f-dev.toml.pins-Target.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
#[allow(unused_imports)]
use drv_stm32xx_i2c::{I2cGpio, I2cPins};
pub fn pins() -> [I2cPins; 1] {
    use drv_i2c_api::{Controller, PortIndex};
    use drv_stm32xx_sys_api::{self as gpio_api, Alternate};
    [I2cPins {
        controller: Controller::I2C1,
        port: PortIndex(0),
        scl: gpio_api::Port::B.pin(6),
        sda: gpio_api::Port::B.pin(7),
        function: Alternate::AF4,
    }]
}
