build/xtask/tests/snapshots/i2c_codegen__app_gimlet_rev-f-dev.toml.sensor-id-to-component-id-Sensors.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
pub const MAX_SENSOR_COMPONENT_ID_LEN: usize = 8;
pub const SENSOR_ID_TO_COMPONENT_ID: [fixedstr::FixedStr<
    'static,
    MAX_SENSOR_COMPONENT_ID_LEN,
>; 136] = [
    fixedstr::FixedStr::from_str("J194/U1"),
    fixedstr::FixedStr::from_str("J195/U1"),
    fixedstr::FixedStr::from_str("J196/U1"),
    fixedstr::FixedStr::from_str("J206/U8"),
    fixedstr::FixedStr::from_str("J206/U8"),
    fixedstr::FixedStr::from_str("J206/U8"),
    fixedstr::FixedStr::from_str("J206/U8"),
    fixedstr::FixedStr::from_str("J206/J1"),
    fixedstr::FixedStr::from_str("J207/U8"),
    fixedstr::FixedStr::from_str("J207/U8"),
    fixedstr::FixedStr::from_str("J207/U8"),
    fixedstr::FixedStr::from_str("J207/U8"),
    fixedstr::FixedStr::from_str("J207/J1"),
    fixedstr::FixedStr::from_str("J208/U8"),
    fixedstr::FixedStr::from_str("J208/U8"),
    fixedstr::FixedStr::from_str("J208/U8"),
    fixedstr::FixedStr::from_str("J208/U8"),
    fixedstr::FixedStr::from_str("J208/J1"),
    fixedstr::FixedStr::from_str("J209/U8"),
    fixedstr::FixedStr::from_str("J209/U8"),
    fixedstr::FixedStr::from_str("J209/U8"),
    fixedstr::FixedStr::from_str("J209/U8"),
    fixedstr::FixedStr::from_str("J209/J1"),
    fixedstr::FixedStr::from_str("J210/U8"),
    fixedstr::FixedStr::from_str("J210/U8"),
    fixedstr::FixedStr::from_str("J210/U8"),
    fixedstr::FixedStr::from_str("J210/U8"),
    fixedstr::FixedStr::from_str("J210/J1"),
    fixedstr::FixedStr::from_str("J211/U8"),
    fixedstr::FixedStr::from_str("J211/U8"),
    fixedstr::FixedStr::from_str("J211/U8"),
    fixedstr::FixedStr::from_str("J211/U8"),
    fixedstr::FixedStr::from_str("J211/J1"),
    fixedstr::FixedStr::from_str("J212/U8"),
    fixedstr::FixedStr::from_str("J212/U8"),
    fixedstr::FixedStr::from_str("J212/U8"),
    fixedstr::FixedStr::from_str("J212/U8"),
    fixedstr::FixedStr::from_str("J212/J1"),
    fixedstr::FixedStr::from_str("J213/U8"),
    fixedstr::FixedStr::from_str("J213/U8"),
    fixedstr::FixedStr::from_str("J213/U8"),
    fixedstr::FixedStr::from_str("J213/U8"),
    fixedstr::FixedStr::from_str("J213/J1"),
    fixedstr::FixedStr::from_str("J214/U8"),
    fixedstr::FixedStr::from_str("J214/U8"),
    fixedstr::FixedStr::from_str("J214/U8"),
    fixedstr::FixedStr::from_str("J214/U8"),
    fixedstr::FixedStr::from_str("J214/J1"),
    fixedstr::FixedStr::from_str("J215/U8"),
    fixedstr::FixedStr::from_str("J215/U8"),
    fixedstr::FixedStr::from_str("J215/U8"),
    fixedstr::FixedStr::from_str("J215/U8"),
    fixedstr::FixedStr::from_str("J215/J1"),
    fixedstr::FixedStr::from_str("U491"),
    fixedstr::FixedStr::from_str("U522"),
    fixedstr::FixedStr::from_str("U522"),
    fixedstr::FixedStr::from_str("U522"),
    fixedstr::FixedStr::from_str("U560"),
    fixedstr::FixedStr::from_str("U560"),
    fixedstr::FixedStr::from_str("U560"),
    fixedstr::FixedStr::from_str("U524"),
    fixedstr::FixedStr::from_str("U524"),
    fixedstr::FixedStr::from_str("U524"),
    fixedstr::FixedStr::from_str("U561"),
    fixedstr::FixedStr::from_str("U561"),
    fixedstr::FixedStr::from_str("U561"),
    fixedstr::FixedStr::from_str("U275"),
    fixedstr::FixedStr::from_str("U275"),
    fixedstr::FixedStr::from_str("U275"),
    fixedstr::FixedStr::from_str("U275"),
    fixedstr::FixedStr::from_str("P0/SBTSI"),
    fixedstr::FixedStr::from_str("U350"),
    fixedstr::FixedStr::from_str("U350"),
    fixedstr::FixedStr::from_str("U350"),
    fixedstr::FixedStr::from_str("U350"),
    fixedstr::FixedStr::from_str("U350"),
    fixedstr::FixedStr::from_str("U350"),
    fixedstr::FixedStr::from_str("U350"),
    fixedstr::FixedStr::from_str("U350"),
    fixedstr::FixedStr::from_str("U351"),
    fixedstr::FixedStr::from_str("U351"),
    fixedstr::FixedStr::from_str("U351"),
    fixedstr::FixedStr::from_str("U351"),
    fixedstr::FixedStr::from_str("U351"),
    fixedstr::FixedStr::from_str("U351"),
    fixedstr::FixedStr::from_str("U351"),
    fixedstr::FixedStr::from_str("U351"),
    fixedstr::FixedStr::from_str("U352"),
    fixedstr::FixedStr::from_str("U352"),
    fixedstr::FixedStr::from_str("U352"),
    fixedstr::FixedStr::from_str("U352"),
    fixedstr::FixedStr::from_str("U352"),
    fixedstr::FixedStr::from_str("U352"),
    fixedstr::FixedStr::from_str("U352"),
    fixedstr::FixedStr::from_str("U352"),
    fixedstr::FixedStr::from_str("U352"),
    fixedstr::FixedStr::from_str("U419"),
    fixedstr::FixedStr::from_str("U419"),
    fixedstr::FixedStr::from_str("U419"),
    fixedstr::FixedStr::from_str("U452"),
    fixedstr::FixedStr::from_str("U452"),
    fixedstr::FixedStr::from_str("U452"),
    fixedstr::FixedStr::from_str("U321"),
    fixedstr::FixedStr::from_str("U321"),
    fixedstr::FixedStr::from_str("U321"),
    fixedstr::FixedStr::from_str("U321"),
    fixedstr::FixedStr::from_str("U321"),
    fixedstr::FixedStr::from_str("U321"),
    fixedstr::FixedStr::from_str("U565"),
    fixedstr::FixedStr::from_str("U565"),
    fixedstr::FixedStr::from_str("U565"),
    fixedstr::FixedStr::from_str("J197/U1"),
    fixedstr::FixedStr::from_str("J198/U1"),
    fixedstr::FixedStr::from_str("J199/U1"),
    fixedstr::FixedStr::from_str("U431"),
    fixedstr::FixedStr::from_str("U431"),
    fixedstr::FixedStr::from_str("U431"),
    fixedstr::FixedStr::from_str("M0"),
    fixedstr::FixedStr::from_str("M8"),
    fixedstr::FixedStr::from_str("M1"),
    fixedstr::FixedStr::from_str("M9"),
    fixedstr::FixedStr::from_str("M2"),
    fixedstr::FixedStr::from_str("M10"),
    fixedstr::FixedStr::from_str("M3"),
    fixedstr::FixedStr::from_str("M11"),
    fixedstr::FixedStr::from_str("M4"),
    fixedstr::FixedStr::from_str("M12"),
    fixedstr::FixedStr::from_str("M5"),
    fixedstr::FixedStr::from_str("M13"),
    fixedstr::FixedStr::from_str("M6"),
    fixedstr::FixedStr::from_str("M14"),
    fixedstr::FixedStr::from_str("M7"),
    fixedstr::FixedStr::from_str("M15"),
    fixedstr::FixedStr::from_str("P1"),
    fixedstr::FixedStr::from_str("P2"),
    fixedstr::FixedStr::from_str("FAN_CTRL"),
];
