build/xtask/tests/snapshots/i2c_codegen__app_gimlet_rev-f-dev.toml.sensor-id-to-name-Sensors.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
pub const MAX_SENSOR_NAME_LEN: usize = 18;
pub const SENSOR_ID_TO_NAME: [fixedstr::FixedStr<
    'static,
    MAX_SENSOR_NAME_LEN,
>; 136] = [
    fixedstr::FixedStr::from_str("Southwest"),
    fixedstr::FixedStr::from_str("South"),
    fixedstr::FixedStr::from_str("Southeast"),
    fixedstr::FixedStr::from_str("V12_U2A_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2A_A0"),
    fixedstr::FixedStr::from_str("V12_U2A_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2A_A0"),
    fixedstr::FixedStr::from_str("U2_N0"),
    fixedstr::FixedStr::from_str("V12_U2B_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2B_A0"),
    fixedstr::FixedStr::from_str("V12_U2B_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2B_A0"),
    fixedstr::FixedStr::from_str("U2_N1"),
    fixedstr::FixedStr::from_str("V12_U2C_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2C_A0"),
    fixedstr::FixedStr::from_str("V12_U2C_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2C_A0"),
    fixedstr::FixedStr::from_str("U2_N2"),
    fixedstr::FixedStr::from_str("V12_U2D_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2D_A0"),
    fixedstr::FixedStr::from_str("V12_U2D_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2D_A0"),
    fixedstr::FixedStr::from_str("U2_N3"),
    fixedstr::FixedStr::from_str("V12_U2E_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2E_A0"),
    fixedstr::FixedStr::from_str("V12_U2E_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2E_A0"),
    fixedstr::FixedStr::from_str("U2_N4"),
    fixedstr::FixedStr::from_str("V12_U2F_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2F_A0"),
    fixedstr::FixedStr::from_str("V12_U2F_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2F_A0"),
    fixedstr::FixedStr::from_str("U2_N5"),
    fixedstr::FixedStr::from_str("V12_U2G_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2G_A0"),
    fixedstr::FixedStr::from_str("V12_U2G_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2G_A0"),
    fixedstr::FixedStr::from_str("U2_N6"),
    fixedstr::FixedStr::from_str("V12_U2H_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2H_A0"),
    fixedstr::FixedStr::from_str("V12_U2H_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2H_A0"),
    fixedstr::FixedStr::from_str("U2_N7"),
    fixedstr::FixedStr::from_str("V12_U2I_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2I_A0"),
    fixedstr::FixedStr::from_str("V12_U2I_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2I_A0"),
    fixedstr::FixedStr::from_str("U2_N8"),
    fixedstr::FixedStr::from_str("V12_U2J_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2J_A0"),
    fixedstr::FixedStr::from_str("V12_U2J_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2J_A0"),
    fixedstr::FixedStr::from_str("U2_N9"),
    fixedstr::FixedStr::from_str("t6"),
    fixedstr::FixedStr::from_str("V3P3_SP_A2"),
    fixedstr::FixedStr::from_str("V3P3_SP_A2"),
    fixedstr::FixedStr::from_str("V3P3_SP_A2"),
    fixedstr::FixedStr::from_str("V3P3_SYS_A0"),
    fixedstr::FixedStr::from_str("V3P3_SYS_A0"),
    fixedstr::FixedStr::from_str("V3P3_SYS_A0"),
    fixedstr::FixedStr::from_str("V5_SYS_A2"),
    fixedstr::FixedStr::from_str("V5_SYS_A2"),
    fixedstr::FixedStr::from_str("V5_SYS_A2"),
    fixedstr::FixedStr::from_str("V1P8_SYS_A2"),
    fixedstr::FixedStr::from_str("V1P8_SYS_A2"),
    fixedstr::FixedStr::from_str("V1P8_SYS_A2"),
    fixedstr::FixedStr::from_str("V3P3_M2A_A0HP"),
    fixedstr::FixedStr::from_str("V3P3_M2B_A0HP"),
    fixedstr::FixedStr::from_str("V3P3_M2A_A0HP"),
    fixedstr::FixedStr::from_str("V3P3_M2B_A0HP"),
    fixedstr::FixedStr::from_str("CPU"),
    fixedstr::FixedStr::from_str("VDD_VCORE"),
    fixedstr::FixedStr::from_str("VDD_MEM_ABCD"),
    fixedstr::FixedStr::from_str("VDD_VCORE"),
    fixedstr::FixedStr::from_str("VDD_MEM_ABCD"),
    fixedstr::FixedStr::from_str("VDD_VCORE"),
    fixedstr::FixedStr::from_str("VDD_MEM_ABCD"),
    fixedstr::FixedStr::from_str("VDD_VCORE"),
    fixedstr::FixedStr::from_str("VDD_MEM_ABCD"),
    fixedstr::FixedStr::from_str("VDDCR_SOC"),
    fixedstr::FixedStr::from_str("VDD_MEM_EFGH"),
    fixedstr::FixedStr::from_str("VDDCR_SOC"),
    fixedstr::FixedStr::from_str("VDD_MEM_EFGH"),
    fixedstr::FixedStr::from_str("VDDCR_SOC"),
    fixedstr::FixedStr::from_str("VDD_MEM_EFGH"),
    fixedstr::FixedStr::from_str("VDDCR_SOC"),
    fixedstr::FixedStr::from_str("VDD_MEM_EFGH"),
    fixedstr::FixedStr::from_str("VPP_ABCD"),
    fixedstr::FixedStr::from_str("VPP_EFGH"),
    fixedstr::FixedStr::from_str("V1P8_SP3"),
    fixedstr::FixedStr::from_str("VPP_ABCD"),
    fixedstr::FixedStr::from_str("VPP_EFGH"),
    fixedstr::FixedStr::from_str("V1P8_SP3"),
    fixedstr::FixedStr::from_str("VPP_ABCD"),
    fixedstr::FixedStr::from_str("VPP_EFGH"),
    fixedstr::FixedStr::from_str("V1P8_SP3"),
    fixedstr::FixedStr::from_str("V54_FAN"),
    fixedstr::FixedStr::from_str("V54_FAN"),
    fixedstr::FixedStr::from_str("V54_FAN"),
    fixedstr::FixedStr::from_str("V54_HS_OUTPUT"),
    fixedstr::FixedStr::from_str("V54_HS_OUTPUT"),
    fixedstr::FixedStr::from_str("V54_HS_OUTPUT"),
    fixedstr::FixedStr::from_str("Southeast"),
    fixedstr::FixedStr::from_str("Northeast"),
    fixedstr::FixedStr::from_str("South"),
    fixedstr::FixedStr::from_str("North"),
    fixedstr::FixedStr::from_str("Southwest"),
    fixedstr::FixedStr::from_str("Northwest"),
    fixedstr::FixedStr::from_str("V0P96_NIC_VDD_A0HP"),
    fixedstr::FixedStr::from_str("V0P96_NIC_VDD_A0HP"),
    fixedstr::FixedStr::from_str("V0P96_NIC_VDD_A0HP"),
    fixedstr::FixedStr::from_str("Northeast"),
    fixedstr::FixedStr::from_str("North"),
    fixedstr::FixedStr::from_str("Northwest"),
    fixedstr::FixedStr::from_str("V12_SYS_A2"),
    fixedstr::FixedStr::from_str("V12_SYS_A2"),
    fixedstr::FixedStr::from_str("V12_SYS_A2"),
    fixedstr::FixedStr::from_str("DIMM_A0"),
    fixedstr::FixedStr::from_str("DIMM_A1"),
    fixedstr::FixedStr::from_str("DIMM_B0"),
    fixedstr::FixedStr::from_str("DIMM_B1"),
    fixedstr::FixedStr::from_str("DIMM_C0"),
    fixedstr::FixedStr::from_str("DIMM_C1"),
    fixedstr::FixedStr::from_str("DIMM_D0"),
    fixedstr::FixedStr::from_str("DIMM_D1"),
    fixedstr::FixedStr::from_str("DIMM_E0"),
    fixedstr::FixedStr::from_str("DIMM_E1"),
    fixedstr::FixedStr::from_str("DIMM_F0"),
    fixedstr::FixedStr::from_str("DIMM_F1"),
    fixedstr::FixedStr::from_str("DIMM_G0"),
    fixedstr::FixedStr::from_str("DIMM_G1"),
    fixedstr::FixedStr::from_str("DIMM_H0"),
    fixedstr::FixedStr::from_str("DIMM_H1"),
    fixedstr::FixedStr::from_str("M2_A"),
    fixedstr::FixedStr::from_str("M2_B"),
    fixedstr::FixedStr::from_str("fan_ctrl"),
];
