build/xtask/tests/snapshots/i2c_codegen__app_gimletlet_app-meanwell.toml.codegen-Devices.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
pub(crate) mod i2c_config {

    pub mod devices {
        #[allow(unused_imports)]
        use drv_i2c_api::{Controller, I2cDevice, PortIndex};
        #[allow(unused_imports)]
        use userlib::TaskId;

        #[allow(dead_code)]
        #[allow(clippy::match_single_binding)]
        pub fn device_by_index(
            _task: TaskId,
            index: usize,
        ) -> Option<I2cDevice> {
            match index {
                _ => None,
            }
        }

        #[allow(dead_code)]
        #[allow(clippy::match_single_binding)]
        pub fn lookup_controller(index: usize) -> Option<Controller> {
            match index {
                _ => None,
            }
        }

        #[allow(dead_code)]
        #[allow(clippy::match_single_binding)]
        pub fn lookup_port(index: usize) -> Option<PortIndex> {
            match index {
                _ => None,
            }
        }
    }

    pub mod ports {

        #[allow(dead_code)]
        pub const fn i2c2_f() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(0)
        }

        #[allow(dead_code)]
        pub const fn i2c3_c() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(0)
        }

        #[allow(dead_code)]
        pub const fn i2c4_f() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(0)
        }
    }
}
